# msai-54315-ai-for-healthcare

./: .gitignore
assignment-1-mimic-visualization/: 54315-assignment-1-mimic-visualization.ipynb  README.md  explore-data.py  main.py  pyproject.toml
assignment-2-mimic-queries/: queries.md
assignment-3-mimic-nlp/: assignment-3-mimic-nlp.ipynb  explore-data.py  pyproject.toml
assignment-3-mimic-nlp/src/assignment_3_mimic_nlp/: __init__.py
assignment-4-self-learning-tutorial/: 54315-assignment-5-slt-diag-screening.ipynb  main.py  pyproject.toml
assignment-5-mimic-ml-dl/: main.py  mimic-ml-dl.ipynb  pyproject.toml
assignment-6-llm-tutorial/: llm-tutorial.ipynb  main.py  pyproject.toml
assignment-7-high-risk/: README.md  pyproject.toml
