[project]
name = "assignment-3-mimic-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "schwiet", email = "seth.schwiet@pm.me" }
]
requires-python = ">=3.9"
dependencies = [
    "gensim==4.*",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn==1.*",
    "spacy==3.7.*",
    "tqdm>=4.67.1",
]

[project.scripts]
assignment-3-mimic-nlp = "assignment_3_mimic_nlp:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
